Tambah Deskripsi Meta dan Merubah <h3> dan <h5> bentuk class
Menambahkan Deskripsi Meta pada setiap halaman. email: maulana.satria.n03@gmail.com,//, Membuat Aexp urut sesuai ukuran H1-H5 (tidak ada yang double), menambahkan class=''H5'' dan ''H3'' sebagai pengganti H5 dan H3 yang mengakibatkan score accesibility turun.,//, menghapus style .Aexp span,//, merubah style warna ''.Aprofil a'' agar lebih jelas warnanya

--- a/2about.html
+++ b/2about.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Kenali lebih dekat Maulana Satria Nugraha, seorang 
+    staf administrasi dengan latar belakang akuntansi dan spesialisasi dalam 
+    otomatisasi data. Berpengalaman dalam pengelolaan keuangan dan sistem 
+    administrasi berbasis teknologi. email: maulana.satria.n03@gmail.com">
     <link rel="stylesheet" href="custom.css" />
     <link rel="stylesheet" href="Responsive.css" />
     <title>Profil Maul.code</title>
@@ -53,15 +57,15 @@
           <section class="Askill">
             <h1>Professional Skill</h1>
             <div>
-              <h3>Akuntansi & Keuangan</h3>
+              <span class="H3">Akuntansi & Keuangan</span>
               <p>Laporan Keuangan, rasio keuangan</p>
             </div>
             <div>
-              <h3>MS Excel & Spreadsheet</h3>
+              <span class="H3">MS Excel & Spreadsheet</span>
               <p>Data Entry, Otomatisasi Data & Rumus</p>
             </div>
             <div>
-              <h3>Web Development</h3>
+              <span class="H3">Web Development</span>
               <p>html, CSS, JavaScript</p>
             </div>
           </section>
@@ -71,21 +75,21 @@
           <section class="Aexp">
             <h1>Professional Journey</h1>
             <div>
-              <h3>Staff Tata Usaha dan Administrasi</h3>
-              <h5>Yayasan Haqqus Sunnah Pemalang</h5>
-              <h5>Juni 2024 s.d. Sekarang</h5>
+              <span class="H3">Staff Tata Usaha dan Administrasi</span>
+              <span class="H5">Yayasan Haqqus Sunnah Pemalang</span>
+              <span class="H5"><i>Juni 2024 s.d. Sekarang</i></span>
               <p>
                 Mengelola administrasi kepegawaian, keuangan, dan operasional di
-                <span>SDIT Bina Ilmu Pemalang</span> dan <span>SMPIT Bina Ilmu Pemalang</span>. 
+                <b><i>SDIT Bina Ilmu Pemalang</i></b> dan <b><i>SMPIT Bina Ilmu Pemalang</i></b>. 
                 Mengembangkan database administrasi berbasis otomatisasi menggunakan Excel/Spreadsheet,
                 meningkatkan efisiensi kerja hingga 30%. Bertanggung jawab atas pengelolaan tunggakan 
                 siswa dengan strategi penagihan yang lebih sistematis
               </p>
             </div>
             <div>
-              <h3>Finance dan Administration Staff (FA)</h3>
-              <h5>Yayasan Mentari Sehat Indonesia - SSR Pemalang</h5>
-              <h5 class="Italic">Januari s.d. Juni 2024</h5>
+              <span class="H3">Finance dan Administration Staff (FA)</span>
+              <span class="H5">Yayasan Mentari Sehat Indonesia - SSR Pemalang</span>
+              <span class="H5"><i>Januari s.d. Juni 2024</i></span>
               <p>
                 Bertanggung jawab atas pengelolaan dana hibah Global Fund untuk Program Pemberantasan TBC 
                 di Indonesia, termasuk penyusunan laporan keuangan, analisis efektivitas penggunaan dana, 
@@ -98,10 +102,10 @@
               </p>
             </div>
             <div>
-              <h3>Staf Khusus Waket 2 / Accounting</h3>
-              <h5>Sekolah Tinggi Ilmu Tarbiyah (STIT) Pemalang</h5>
-              <h5>(Sekarang: Institut Agama Islam Pemalang (INSIP))</h5>
-              <h5 class="Italic">Tahun 2021 s.d. Tahun 2024</h5>
+              <span class="H3">Staf Khusus Waket 2 / Accounting</span>
+              <span class="H5">Sekolah Tinggi Ilmu Tarbiyah (STIT) Pemalang</span>
+              <span class="H5">[Sekarang: Institut Agama Islam Pemalang (INSIP)]</span>
+              <span class="H5"><i>Tahun 2021 s.d. Tahun 2024</i></span>
               <p>
                 Mendukung Wakil Ketua 2 dalam pengelolaan keuangan kampus, termasuk perencanaan anggaran, 
                 penyusunan laporan keuangan internal, serta Melakukan review dan verifikasi awal terhadap 
@@ -115,9 +119,9 @@
               </p>
             </div>
             <div>
-              <h3>Staf Admin Gudang</h3>
-              <h5>CV. Multikomunika (Authorized Dealer XL-Axiata) Semarang</h5>
-              <h5 class="Italic">Tahun 2017 s.d. Tahun 2019</h5>
+              <span class="H3">Staf Admin Gudang</span>
+              <span class="H5">CV. Multikomunika (Authorized Dealer XL-Axiata) Semarang</span>
+              <span class="H5"><i>Tahun 2017 s.d. Tahun 2019</i></span>
               <p>
                 Bertanggung jawab atas administrasi persediaan barang, pencatatan stok masuk dan keluar, 
                 serta koordinasi dengan tim produksi dan sales untuk memastikan kelancaran distribusi produk. 
@@ -125,9 +129,9 @@
               </p>
             </div>
             <div>
-              <h3>Branch Inventory Control (BIC)</h3>
-              <h5>PT. Indomarco Prismatama,Tbk. - Branch Cirebon</h5>
-              <h5 class="Italic">Tahun 2015 s.d. Tahun 2016</h5>
+              <span class="H3">Branch Inventory Control (BIC)</span>
+              <span class="H5">PT. Indomarco Prismatama,Tbk. - Branch Cirebon</span>
+              <span class="H5"><i>Tahun 2015 s.d. Tahun 2016</i></span>
               <p>
                 Melakukan audit stok di lebih dari 100 gerai Indomaret di wilayah Tegal hingga Pemalang. 
                 Bertanggung jawab dalam investigasi fraud (penyimpangan/kecurangan) menggunakan analisis data, 
