--- a/3galeri.html
+++ b/3galeri.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Jelajahi galeri proyek dan dokumentasi 
+    profesional Maulana Satria Nugraha, termasuk Dokumentasi di lingkungan kerja ataupun hasil 
+    kerja di bidang administrasi, keuangan, serta pengelolaan data otomatis. 
+    Lihat lebih banyak di sini! Email:maulana.satria.n03@gmail.com">
     <link rel="stylesheet" href="custom.css" />
     <link rel="stylesheet" href="Responsive.css" />
     <title>Profil Maul.code</title>
