--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" 
+    content="Maulana Satria Nugraha adalah seorang profesional di bidang administrasi dan 
+    keuangan dengan keahlian dalam otomatisasi data menggunakan Excel. Saat 
+    ini juga sedang mendalami coding untuk meningkatkan efisiensi kerja. 
+    Temukan portofolio dan pengalaman lengkapnya di sini. Email: maulana.satria.n03@gmail.com">
     <link rel="stylesheet" href="custom.css" />
     <link rel="stylesheet" href="Responsive.css" />
     <title>Profil Maul.code</title>
