Mengganti Nama Foto dan altnya dengan Maulana-Satria-Nugraha
Perubahan ini bermaksud untuk meningkatkan tingkat SEO dan meningkatkan tingkat kemunculan foto profil di pencarian google

--- a/2about.html
+++ b/2about.html
@@ -38,7 +38,7 @@
         <!-- Simple Profil Start -->
           <section class="Aprofil">
             <h1>About Me</h2>
-            <img src="bahan/Foto_CV.webp" alt="Maulana Satria Nugraha" />
+            <img src="bahan/Maulana-Satria-Nugraha.webp" alt="Maulana-Satria-Nugraha" />
             <h2>Maulana Satria Nugraha, S.Ak.</h2>
             <p>
               Saya adalah seorang Staf Administrasi dengan pengalaman di 
