--- a/4portofolio.html
+++ b/4portofolio.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lihat berbagai proyek dan pengalaman 
-    profesional Maulana Satria Nugraha dalam bidang administrasi, keuangan, dan otomatisasi 
-    data menggunakan Excel dan Spreadsheet, ataupun website. Email: maulana.satria.n03@gmail.com">
+    profesional Maulana Satria Nugraha dalam bidang administrasi, keuangan, 
+    dan otomatisasi data menggunakan Excel dan Spreadsheet, ataupun website. 
+    Email: maulana.satria.n03@gmail.com">
     <link rel="stylesheet" href="custom.css" />
     <link rel="stylesheet" href="Responsive.css" />
     <title>Profil Maul.code</title>
