--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               Let's get started
             </button>
           </div>
-          <img src="bahan/Foto_CV.webp" alt="Maulana Satria Nugraha" />
+          <img src="bahan/Maulana-Satria-Nugraha.webp" alt="Maulana-Satria-Nugraha" />
         </section>
         <!-- Simple Home Profil End -->
 
