Meningkatkan keamanan dan SEO Website, serta mempersiapkan foto-foto untuk ''3.gallery.html''
Merubah kembali alt dari foto profil menjadi Photo - Maulana Satria Nugraha ,//, menambahkan rel=''noopener'' pada hiperlink media sosial pada index.html. ,//, Merubah semua tittle website ,//, Menambahkan robots.txt dan sitemap.xml untuk meningkatkan SEO  ,//, Merubah ''3galeri.html'' menjadi ''3gallery.html'' dan ''4portofolio.html'' menjadi ''4portfolio.html''  ,//, Mengupload Folder /Gallery berisi foto-foto kerja.  ,//, Mengisi halaman Galery (sementara di hide dulu)

--- a/4portfolio.html
+++ b/4portfolio.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Jelajahi galeri proyek dan dokumentasi 
-    profesional Maulana Satria Nugraha, termasuk Dokumentasi di lingkungan kerja ataupun hasil 
-    kerja di bidang administrasi, keuangan, serta pengelolaan data otomatis. 
-    Lihat lebih banyak di sini! Email:maulana.satria.n03@gmail.com">
+    <meta name="description" content="Lihat berbagai proyek dan pengalaman 
+    profesional Maulana Satria Nugraha dalam bidang administrasi, keuangan, 
+    dan otomatisasi data menggunakan Excel dan Spreadsheet, ataupun website. 
+    Email: maulana.satria.n03@gmail.com">
     <link rel="stylesheet" href="custom.css" />
     <link rel="stylesheet" href="Responsive.css" />
-    <title>Profil Maul.code</title>
+    <title>Portfolio of Maulana Satria Nugraha</title>
 </head>
 <body>
     <section class="container">
@@ -20,8 +20,8 @@
         <nav class="nav-link">
           <a href="index.html" class="menu-navbar"><span>Home</span></a>
           <a href="2about.html" class="menu-navbar"><span>About</span></a>
-          <a href="#" class="menu-navbar active"><span>Galery</span></a>
-          <a href="4portofolio.html" class="menu-navbar"><span>Portofolio</span></a
+          <a href="3gallery.html" class="menu-navbar"><span>Galery</span></a>
+          <a href="#" class="menu-navbar active"><span>Portofolio</span></a
           >
         </nav>
         <!-- Navigation Bar Tampilan Dekstop -->
@@ -33,16 +33,15 @@
       </header>
       <!-- Navigation Bar End -->
 
-      <!-- Content Start -->
-      <section class="main">
-        <H1 Class="Alert">WORK IN PROGRES, PLEASE COME BACK LATER!</H1>
-      </section>
-            
-      <!-- Content End -->
+        <!-- Content Start -->
+        <section class="main">
+            <H1 Class="Alert">WORK IN PROGRES, PLEASE COME BACK LATER!</H1>
+        </section>
+        <!-- Content End -->
 
-      <!-- Footer Start -->
+        <!-- Footer Start -->
         <footer>
-          <p>©2025 Maulana Satria Nugraha. All Rights Reserved.</p>
+            <p>©2025 Maulana Satria Nugraha. All Rights Reserved.</p>
         </footer>
         <!-- Footer End -->
     </section>
