--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     Temukan portofolio dan pengalaman lengkapnya di sini. Email: maulana.satria.n03@gmail.com">
     <link rel="stylesheet" href="custom.css" />
     <link rel="stylesheet" href="Responsive.css" />
-    <title>Profil Maul.code</title>
+    <title>Maulana Satria Nugraha - Excel Automation & Admin Support</title>
   </head>
   <body>
     <section class="container">
@@ -21,8 +21,8 @@
         <nav class="nav-link">
           <a href="#" class="menu-navbar active"><span>Home</span></a>
           <a href="2about.html" class="menu-navbar"><span>About</span></a>
-          <a href="3galeri.html" class="menu-navbar"><span>Galery</span></a>
-          <a href="4portofolio.html" class="menu-navbar"><span>Portofolio</span></a>
+          <a href="3gallery.html" class="menu-navbar"><span>Galery</span></a>
+          <a href="4portfolio.html" class="menu-navbar"><span>Portofolio</span></a>
         </nav>
         <!-- Navigation Bar Tampilan Dekstop -->
         <div class="burger" onclick="toggleMenu()">
@@ -48,7 +48,7 @@
               Let's get started
             </button>
           </div>
-          <img src="bahan/Maulana-Satria-Nugraha.webp" alt="Maulana-Satria-Nugraha" />
+          <img src="bahan/Maulana-Satria-Nugraha.webp" alt="Photo - Maulana Satria Nugraha" />
         </section>
         <!-- Simple Home Profil End -->
 
@@ -56,16 +56,16 @@
         <section class="socialMedia">
           <p>contact:</p>
           <div>
-            <a href="https://github.com/CodeByMaul" target="_blank">
+            <a href="https://github.com/CodeByMaul" target="_blank" rel="noopener">
               <img src="bahan/logo-GitHub.webp" alt="GitHub_Maulana.SN"/>
             </a>
-            <a href="https://www.linkedin.com/in/maulana-satria-nugraha" target="_blank" >
+            <a href="https://www.linkedin.com/in/maulana-satria-nugraha" target="_blank" rel="noopener">
               <img src="bahan/logo-Linkedin.webp" alt="LinkedIn_Maulana.SN" />
             </a>
-            <a href="https://www.instagram.com/maulana.satria_n/" target="_blank" >
+            <a href="https://www.instagram.com/maulana.satria_n/" target="_blank" rel="noopener">
               <img src="bahan/logo-IG.webp" alt="IG_Maulana.SN"/>
             </a>
-            <a href="https://www.facebook.com/msn.socialpreneur/" target="_blank" >
+            <a href="https://www.facebook.com/msn.socialpreneur/" target="_blank" rel="noopener">
               <img src="bahan/logo-FB.webp" alt="FB_Maulana.SN" />
             </a>
           </div>
