--- a/2about.html
+++ b/2about.html
@@ -9,7 +9,7 @@
     administrasi berbasis teknologi. email: maulana.satria.n03@gmail.com">
     <link rel="stylesheet" href="custom.css" />
     <link rel="stylesheet" href="Responsive.css" />
-    <title>Profil Maul.code</title>
+    <title>About Maulana Satria Nugraha</title>
 </head>
 <body>
     <section class="container">
@@ -20,8 +20,8 @@
         <nav class="nav-link">
           <a href="index.html" class="menu-navbar"><span>Home</span></a>
           <a href="#" class="menu-navbar active"><span>About</span></a>
-          <a href="3galeri.html" class="menu-navbar"><span>Galery</span></a>
-          <a href="4portofolio.html" class="menu-navbar"
+          <a href="3gallery.html" class="menu-navbar"><span>Galery</span></a>
+          <a href="4portfolio.html" class="menu-navbar"
             ><span>Portofolio</span></a>
         </nav>
         <!-- Navigation Bar Tampilan Dekstop -->
@@ -38,7 +38,7 @@
         <!-- Simple Profil Start -->
           <section class="Aprofil">
             <h1>About Me</h2>
-            <img src="bahan/Maulana-Satria-Nugraha.webp" alt="Maulana-Satria-Nugraha" />
+            <img src="bahan/Maulana-Satria-Nugraha.webp" alt="Photo - Maulana Satria Nugraha" />
             <h2>Maulana Satria Nugraha, S.Ak.</h2>
             <p>
               Saya adalah seorang Staf Administrasi dengan pengalaman di 
@@ -49,7 +49,7 @@
               dan pengelolaan data. Saya selalu berkomitmen untuk terus belajar 
               dan berkontribusi dalam bidang administrasi, keuangan, dan teknologi.
             </p>
-            <a href="4portofolio.html">Lihat Portofolio</a>
+            <a href="4portfolio.html">Lihat Portofolio</a>
           </section>
         <!-- Simple Profil End -->
 
@@ -87,7 +87,7 @@
               </p>
             </div>
             <div>
-              <span class="H3">Finance dan Administration Staff (FA)</span>
+              <span class="H3">Finance and Administration Staff (FA)</span>
               <span class="H5">Yayasan Mentari Sehat Indonesia - SSR Pemalang</span>
               <span class="H5"><i>Januari s.d. Juni 2024</i></span>
               <p>
