Perbaikan untuk hide content di 3gallery.html

--- a/3gallery.html
+++ b/3gallery.html
@@ -42,15 +42,15 @@
 
         <h2>Yayasan Haqqus Sunnah Pemalang</h2>
         <div class="Album">
-          <div> <!-- Gambar 1 --!>
+          <div> < Gambar 1 >
             <img src="isi gambar" alt="" />
             <p>Isi tulisan</p>
           </div>
-          <div> <!-- Gambar 2 --!>
+          <div> < Gambar 2 >
             <img src="isi gambar" alt="" />
             <p>Isi tulisan</p>
           </div>
-          <div> <!-- Gambar 3 --!>
+          <div> < Gambar 3 >
             <img src="isi gambar" alt="" />
             <p>Isi tulisan</p>
           </div>
@@ -58,15 +58,15 @@
 
         <h2>Yayasan Mentari Sehat Indonesia - SSR Pemalang</h2>
         <div class="Album">
-          <div> <!-- Gambar 1 --!>
+          <div> < Gambar 1 >
             <img src="isi gambar" alt="" />
             <p>Isi tulisan</p>
           </div>
-          <div> <!-- Gambar 2 --!>
+          <div> < Gambar 2 >
             <img src="isi gambar" alt="" />
             <p>Isi tulisan</p>
           </div>
-          <div> <!-- Gambar 3 --!>
+          <div> < Gambar 3 >
             <img src="isi gambar" alt="" />
             <p>Isi tulisan</p>
           </div>
@@ -75,15 +75,15 @@
         <h2>Sekolah Tinggi Ilmu Tarbiyah (STIT) Pemalang</h2>
         <h3>[Sekarang: Institut Agama Islam Pemalang (INSIP)]</h3>
         <div class="Album">
-          <div> <!-- Gambar 1 --!>
+          <div> < Gambar 1 >
             <img src="isi gambar" alt="" />
             <p>Isi tulisan</p>
           </div>
-          <div> <!-- Gambar 2 --!>
+          <div> < Gambar 2 >
             <img src="isi gambar" alt="" />
             <p>Isi tulisan</p>
           </div>
-          <div> <!-- Gambar 3 --!>
+          <div> < Gambar 3 >
             <img src="isi gambar" alt="" />
             <p>Isi tulisan</p>
           </div>
@@ -91,15 +91,15 @@
 
         <h2>CV. Multikomunika (Authorized Dealer XL-Axiata) Semarang</h2>
         <div class="Album">
-          <div> <!-- Gambar 1 --!>
+          <div> < Gambar 1 >
             <img src="isi gambar" alt="" />
             <p>Isi tulisan</p>
           </div>
-          <div> <!-- Gambar 2 --!>
+          <div> < Gambar 2 >
             <img src="isi gambar" alt="" />
             <p>Isi tulisan</p>
           </div>
-          <div> <!-- Gambar 3 --!>
+          <div> < Gambar 3 >
             <img src="isi gambar" alt="" />
             <p>Isi tulisan</p>
           </div>
@@ -107,15 +107,15 @@
 
         <h2>PT. Indomarco Prismatama,Tbk. - Branch Cirebon</h2>
         <div class="Album">
-          <div> <!-- Gambar 1 --!>
+          <div> < Gambar 1 >
             <img src="isi gambar" alt="" />
             <p>Isi tulisan</p>
           </div>
-          <div> <!-- Gambar 2 --!>
+          <div> < Gambar 2 >
             <img src="isi gambar" alt="" />
             <p>Isi tulisan</p>
           </div>
-          <div> <!-- Gambar 3 --!>
+          <div> < Gambar 3 >
             <img src="isi gambar" alt="" />
             <p>Isi tulisan</p>
           </div>
