Update Besar-besaran halaman Gallery dan Portofolio
Membungkus Album untuk setiap tempat kerja dalam <article>,//, Memasangkan Foto dan keterangannya masing-masing,//, menambahkan style pada 3gallery.html,//, mengganti setiap Nama Folder pada /gallery,//, menambah class=''inpage'' khusus judul,//,  membuat folder portfolio yang berisi file html detail dari masing-masing project,//, menambahkan meta social,//, edit style class=''alert''

--- a/3gallery.html
+++ b/3gallery.html
@@ -35,91 +35,138 @@
 
       <!-- Content Start -->
       <section class="main">
-        <H1 Class="Alert">WORK IN PROGRES, PLEASE COME BACK LATER!</H1>
-      <!--
-        <H1>Momen Belajar & Berkarya</H1>
-        <div>Sekilas perjalanan saya dalam dunia kerja, belajar, dan berbagi...</div>
+        <!-- <h1 Class="Alert">WORK IN PROGRES, PLEASE COME BACK LATER!</H1> -->
+      <--
+        <h1 class="InPage">Momen Belajar & Berkarya</H1>
+        <p class="InPage">Sekilas perjalanan saya dalam dunia kerja, belajar, dan berbagi...</p>
 
-        <h2>Yayasan Haqqus Sunnah Pemalang</h2>
-        <div class="Album">
-          <div> < Gambar 1 >
-            <img src="isi gambar" alt="" />
-            <p>Isi tulisan</p>
+        <article>
+          <h2>Yayasan Haqqus Sunnah Pemalang</h2>
+          <div class="Album">
+            <div> <!-- Gambar 1 -->
+              <img src="gambar.jpg" alt="gambar" />
+              <p>Isi tulisan</p>
+            </div>
+            <div> <!-- Gambar 2 -->
+              <img src="gambar.jpg" alt="gambar" />
+              <p>Isi tulisan</p>
+            </div>
+            <div> <!-- Gambar 3 -->
+              <img src="gambar.jpg" alt="gambar" />
+              <p>Isi tulisan</p>
+            </div>
           </div>
-          <div> < Gambar 2 >
-            <img src="isi gambar" alt="" />
-            <p>Isi tulisan</p>
-          </div>
-          <div> < Gambar 3 >
-            <img src="isi gambar" alt="" />
-            <p>Isi tulisan</p>
-          </div>
-        </div>
+        </article>
 
-        <h2>Yayasan Mentari Sehat Indonesia - SSR Pemalang</h2>
-        <div class="Album">
-          <div> < Gambar 1 >
-            <img src="isi gambar" alt="" />
-            <p>Isi tulisan</p>
+        <article>
+          <h2>Yayasan Mentari Sehat Indonesia - SSR Pemalang</h2>
+          <div class="Album">
+            <div> <!-- Gambar 1 -->
+              <img src="/gallery/Mentari-Sehat-Indonesia/Rakorwil-MSI--Maulana-Satria-Nugraha.webp" alt="Maulana Satria Nugraha saat Rakorwil MSI Jateng" />
+              <p>Mengikuti kegiatan Rakorwil MSI Jateng</p>
+            </div>
+            <div> <!-- Gambar 2 -->
+              <img src="/gallery/Mentari-Sehat-Indonesia/Staf-FA-MSI-Jateng--Maulana-Satria-Nugraha.webp" alt="Maulana Satria Nugraha bersama staf FA seluruh cabang MSI Jateng" />
+              <p>Staf FA seluruh cabang MSI Jateng</p>
+            </div>
+            <div> <!-- Gambar 3 -->
+              <img src="/gallery/Mentari-Sehat-Indonesia/Rapat-Koordinasi-Persiapan-Event--Maulana-Satria-Nugraha.webp" alt="Maulana Satria Nugraha saat Rapat Koordinasi Persiapan Event MSI Pemalang" />
+              <p>Rapat Koordinasi Persiapan Event Pemberantasan TBC - MSI Pemalang</p>
+            </div>
           </div>
-          <div> < Gambar 2 >
-            <img src="isi gambar" alt="" />
-            <p>Isi tulisan</p>
+          <div class="Album"> 
+            <div> <!-- Gambar 4 -->
+              <img src="/gallery/Mentari-Sehat-Indonesia/Validasi-Data-Komunitas-Pemerintah-layanan-kesehatan--Maulana-Satria-Nugraha.webp" alt="Maulana Satria Nugraha saat menjadi Penyelengara Event Validasi Data bersama Pemerintah dan Fasilitas Kesehatan" />
+              <p>Menjadi Panitia Penyelengara Validasi Data antara Komunitas, Pemerintah dan Fasyankes Pemalang</p>
+            </div>
+            <div> <!-- Gambar 5 -->
+              <img src="/gallery/Mentari-Sehat-Indonesia/Refreshment-Kader-MSI--Maulana-Satria-Nugraha.webp" alt="Maulana Satria Nugraha saat menjadi Penyelenggara Refreshment Kader MSI Pemalang" />
+              <p>Menjadi Panitia Penyelenggara Refreshment Kader MSI Pemalang</p>
+            </div>
           </div>
-          <div> < Gambar 3 >
-            <img src="isi gambar" alt="" />
-            <p>Isi tulisan</p>
-          </div>
-        </div>
+        </article>
+        </article>
 
-        <h2>Sekolah Tinggi Ilmu Tarbiyah (STIT) Pemalang</h2>
-        <h3>[Sekarang: Institut Agama Islam Pemalang (INSIP)]</h3>
-        <div class="Album">
-          <div> < Gambar 1 >
-            <img src="isi gambar" alt="" />
-            <p>Isi tulisan</p>
+        <article>
+          <h2>Sekolah Tinggi Ilmu Tarbiyah (STIT) Pemalang</h2>
+          <h3>[Sekarang: Institut Agama Islam Pemalang (INSIP)]</h3>
+          <div class="Album">
+            <div> <!-- Gambar 1 -->
+              <img src="/gallery/Sekolah-Tinggi-Ilmu-Tarbiyah/Bendahara-di-Studium-Generale-Maulana-Satria-Nugraha.webp" alt="Maulana Satria Nugraha saat menjadi Bendahara di Studium Generale STIT Pemalang" />
+              <p>Bendahara Kegiatan Studium Generale</p>
+            </div>
+            <div> <!-- Gambar 2 -->
+              <img src="/gallery/Sekolah-Tinggi-Ilmu-Tarbiyah/Producer-and-Co-Founder-INSSIP-Podcast-Maulana-Satria-Nugraha.webp" alt="Maulana Satria Nugraha saat Menjadi Producer and Co-Founder Inssip Podcast" />
+              <p>Producer and Co-Founder Inssip Podcast</p>
+            </div>
           </div>
-          <div> < Gambar 2 >
-            <img src="isi gambar" alt="" />
-            <p>Isi tulisan</p>
+          <div class="Album">
+            <div> <!-- Gambar 3 -->
+              <img src="/gallery/Sekolah-Tinggi-Ilmu-Tarbiyah/Admin-Pengelola-KIP-Maulana-Satria-Nugraha.webp" alt="Maulana Satria Nugraha saat menjadi Operator Pengelola KIP STIT Pemalang" />
+              <p>Mendampingi Pencetakan Kartu Rekening Penerima KIP</p>
+            </div>
+            <div> <!-- Gambar 4 -->
+              <img src="/gallery/Sekolah-Tinggi-Ilmu-Tarbiyah/Narasumber-Manajemen-Organisasi-Mahasiswa-Bag.Keuangan--Maulana-Satria-Nugraha.webp" alt="Maulana Satria Nugraha saat menjadi Narasumber Manajemen Keuangan pada Pelatihan Manajemen Organisasi Mahasiswa" />
+              <p>Menjadi Narasumber Manajemen Keuangan pada Pelatihan Manajemen Organisasi Mahasiswa - DEMA STIT Pemalang</p>
+            </div>
           </div>
-          <div> < Gambar 3 >
-            <img src="isi gambar" alt="" />
-            <p>Isi tulisan</p>
+          <div class="Album">
+            <div> <!-- Gambar 5 -->
+              <img src="/gallery/Sekolah-Tinggi-Ilmu-Tarbiyah/Koordinator-PMB-Maulana-Satria-Nugraha.webp" alt="Maulana Satria Nugraha saat Menjadi Koordinator PMB STIT Pemalang" />
+              <p>Mendampingi Konsultasi dan pendaftaran Camaba saat menjadi Koordinator PMB</p>
+            </div>
+            <div> <!-- Gambar 6 -->
+              <img src="/gallery/Sekolah-Tinggi-Ilmu-Tarbiyah/Interviewer-PMB-Maulana-Satria-Nugraha.webp" alt="Maulana Satria Nugraha saat Menjadi Interviewer saat Tes Wawancara PMB STIT Pemalang" />
+              <p>Menjadi Interviewer pada tes Wawancara Seleksi masuk PMB</p>
+            </div>
           </div>
-        </div>
+          <div class="Album">
+            <div> <!-- Gambar 7 -->
+              <img src="/gallery/Sekolah-Tinggi-Ilmu-Tarbiyah/Rapat-Evaluasi-Kinerja-Maulana-Satria-Nugraha.webp" alt="Maulana Satria Nugraha saat mengikuti Rapat Evaluasi Kinerja Dosen dan Pegawai" />
+              <p>Rapat Evaluasi STIT Pemalang</p>
+            </div>
+            <div> <!-- Gambar 8 -->
+              <img src="/gallery/Sekolah-Tinggi-Ilmu-Tarbiyah/Visitasi-Alih-Bentuk-STIT-menjadi-INSIP--Maulana-Satria-Nugraha.webp" alt="Maulana Satria Nugraha saat mengikuti acara Visitasi Alih Bentuk STIT menjadi INSIP" />
+              <p>Visitasi Alih Bentuk STIT Pemlang menjadi INSIP</p>
+            </div>
+          </div>
+        </article>
 
-        <h2>CV. Multikomunika (Authorized Dealer XL-Axiata) Semarang</h2>
-        <div class="Album">
-          <div> < Gambar 1 >
-            <img src="isi gambar" alt="" />
-            <p>Isi tulisan</p>
+        <article>
+          <h2>CV. Multikomunika (Authorized Dealer XL-Axiata) Semarang</h2>
+          <div class="Album">
+            <div> <!-- Gambar 1 -->
+              <img src="gambar.jpg" alt="gambar" />
+              <p>Isi tulisan</p>
+            </div>
+            <div> <!-- Gambar 2 -->
+              <img src="gambar.jpg" alt="gambar" />
+              <p>Isi tulisan</p>
+            </div>
+            <div> <!-- Gambar 3 -->
+              <img src="gambar.jpg" alt="gambar" />
+              <p>Isi tulisan</p>
+            </div>
           </div>
-          <div> < Gambar 2 >
-            <img src="isi gambar" alt="" />
-            <p>Isi tulisan</p>
-          </div>
-          <div> < Gambar 3 >
-            <img src="isi gambar" alt="" />
-            <p>Isi tulisan</p>
-          </div>
-        </div>
+        </article>
 
-        <h2>PT. Indomarco Prismatama,Tbk. - Branch Cirebon</h2>
-        <div class="Album">
-          <div> < Gambar 1 >
-            <img src="isi gambar" alt="" />
-            <p>Isi tulisan</p>
+        <article>
+          <h2>PT. Indomarco Prismatama,Tbk. - Branch Cirebon</h2>
+          <div class="Album">
+            <div> <!-- Gambar 1 -->
+              <img src="gambar.jpg" alt="gambar" />
+              <p>Isi tulisan</p>
+            </div>
+            <div> <!-- Gambar 2 -->
+              <img src="gambar.jpg" alt="gambar" />
+              <p>Isi tulisan</p>
+            </div>
+            <div> <!-- Gambar 3 -->
+              <img src="gambar.jpg" alt="gambar" />
+              <p>Isi tulisan</p>
+            </div>
           </div>
-          <div> < Gambar 2 >
-            <img src="isi gambar" alt="" />
-            <p>Isi tulisan</p>
-          </div>
-          <div> < Gambar 3 >
-            <img src="isi gambar" alt="" />
-            <p>Isi tulisan</p>
-          </div>
-        </div>
+        </article>
         -->
         
       </section>
