--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
   <head>
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" 
@@ -11,7 +12,23 @@
     <link rel="stylesheet" href="custom.css" />
     <link rel="stylesheet" href="Responsive.css" />
     <title>Maulana Satria Nugraha - Excel Automation & Admin Support</title>
+
+    <!-- Open Graph Meta (untuk Facebook, LinkedIn, WhatsApp) -->
+    <meta property="og:title" content="Portofolio Maulana Satria Nugraha" />
+    <meta property="og:description" content="Website portofolio profesional Maulana Satria Nugraha — Excel Automation and Admin Support." />
+    <meta property="og:image" content="https://maulana-sn-portfolio.vercel.app/bahan/og-index.webp" />
+    <meta property="og:url" content="https://maulana-sn-portfolio.vercel.app/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta (berfungsi juga di beberapa platform lain) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Portofolio Maulana Satria Nugraha" />
+    <meta name="twitter:description" content="Excel Automation and Admin Support. Temukan portofolio lengkap saya di sini." />
+    <meta name="twitter:image" content="https://maulana-sn-portfolio.vercel.app/bahan/og-index.webp" />
+    <meta name="twitter:url" content="https://maulana-sn-portfolio.vercel.app/" />
+
   </head>
+
   <body>
     <section class="container">
       <!-- Navigation Bar Start -->
