--- a/3gallery.html
+++ b/3gallery.html
@@ -7,6 +7,10 @@
     profesional Maulana Satria Nugraha, termasuk Dokumentasi di lingkungan kerja ataupun hasil 
     kerja di bidang administrasi, keuangan, serta pengelolaan data otomatis. 
     Lihat lebih banyak di sini! Email:maulana.satria.n03@gmail.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,
+    wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap">
     <link rel="stylesheet" href="custom.css" />
     <link rel="stylesheet" href="Responsive.css" />
     <title>Galery of Maulana Satria Nugraha</title>
