--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     keuangan dengan keahlian dalam otomatisasi data menggunakan Excel. Saat 
     ini juga sedang mendalami coding untuk meningkatkan efisiensi kerja. 
     Temukan portofolio dan pengalaman lengkapnya di sini. Email: maulana.satria.n03@gmail.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,
+    wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap">
     <link rel="stylesheet" href="custom.css" />
     <link rel="stylesheet" href="Responsive.css" />
-    <title>Maulana Satria Nugraha - Excel Automation & Admin Support</title>
-
+    
     <!-- Open Graph Meta (untuk Facebook, LinkedIn, WhatsApp) -->
     <meta property="og:title" content="Portofolio Maulana Satria Nugraha" />
     <meta property="og:description" content="Website portofolio profesional Maulana Satria Nugraha — Excel Automation and Admin Support." />
@@ -26,6 +29,8 @@
     <meta name="twitter:description" content="Excel Automation and Admin Support. Temukan portofolio lengkap saya di sini." />
     <meta name="twitter:image" content="https://maulana-sn-portfolio.vercel.app/bahan/og-index.webp" />
     <meta name="twitter:url" content="https://maulana-sn-portfolio.vercel.app/" />
+
+    <title>Maulana Satria Nugraha - Excel Automation & Admin Support</title>
 
   </head>
 
