--- a/portfolio/Excel-Aplikasi-Keuangan-Sederhana-UMKM.html
+++ b/portfolio/Excel-Aplikasi-Keuangan-Sederhana-UMKM.html
@@ -8,8 +8,12 @@
     praktis untuk pengelolaan keuangan usaha kecil secara cepat dan efisien, 
     bagi yang belum mampu merekrut Akuntan. 
     Email: maulana.satria.n03@gmail.com">
-    <link rel="stylesheet" href="/custom.css" />
-    <link rel="stylesheet" href="/Responsive.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,
+    wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap">
+    <link rel="stylesheet" href="custom.css" />
+    <link rel="stylesheet" href="Responsive.css" />
     <title>Aplikasi Keuangan Sederhana UMKM (Ms.Excel)</title>
 </head>
 <body>
