Pemasangan Google Analitics
Pemasangan Google Analitics ini bertujuan untuk mengetahui jumlah pengunjung yang datang ke website ini

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="custom.css" />
     <link rel="stylesheet" href="Responsive.css" />
     
+    <title>Maulana Satria Nugraha - Excel Automation & Admin Support</title>
+
     <!-- Open Graph Meta (untuk Facebook, LinkedIn, WhatsApp) -->
     <meta property="og:title" content="Portofolio Maulana Satria Nugraha" />
     <meta property="og:description" content="Website portofolio profesional Maulana Satria Nugraha — Excel Automation and Admin Support." />
@@ -29,7 +31,15 @@
     <meta name="twitter:image" content="https://maulana-sn-portfolio.vercel.app/bahan/og-index.webp" />
     <meta name="twitter:url" content="https://maulana-sn-portfolio.vercel.app/" />
 
-    <title>Maulana Satria Nugraha - Excel Automation & Admin Support</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-93Y877EE55"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-93Y877EE55');
+    </script>
 
   </head>
 
