--- a/portfolio/Excel-Aplikasi-Keuangan-Sederhana-UMKM.html
+++ b/portfolio/Excel-Aplikasi-Keuangan-Sederhana-UMKM.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Lihat detail proyek aplikasi keuangan 
@@ -14,6 +15,17 @@
     <link rel="stylesheet" href="/custom.css" />
     <link rel="stylesheet" href="/Responsive.css" />
     <title>Aplikasi Keuangan Sederhana UMKM (Ms.Excel)</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-93Y877EE55"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-93Y877EE55');
+    </script>
+    
 </head>
 <body>
     <section class="container">
