Menghidden Gallery yang masih kosong,//, Memperbaiki margin class=inpage

--- a/3gallery.html
+++ b/3gallery.html
@@ -51,28 +51,27 @@
       <!-- Content Start -->
       <section class="main">
         <!-- <h1 Class="Alert">WORK IN PROGRES, PLEASE COME BACK LATER!</H1> -->
-      <--
         <h1 class="InPage">Momen Belajar & Berkarya</H1>
         <p class="InPage">Sekilas perjalanan saya dalam dunia kerja, belajar, dan berbagi...</p>
-
+        <!-- coming soon masih nyari fotonya
         <article>
           <h2>Yayasan Haqqus Sunnah Pemalang</h2>
           <div class="Album">
-            <div> <!-- Gambar 1 -->
+            <div> -- Gambar 1 --
               <img src="gambar.jpg" alt="gambar" />
               <p>Isi tulisan</p>
             </div>
-            <div> <!-- Gambar 2 -->
+            <div> -- Gambar 2 --
               <img src="gambar.jpg" alt="gambar" />
               <p>Isi tulisan</p>
             </div>
-            <div> <!-- Gambar 3 -->
+            <div> -- Gambar 3 --
               <img src="gambar.jpg" alt="gambar" />
               <p>Isi tulisan</p>
             </div>
           </div>
         </article>
-
+        -->
         <article>
           <h2>Yayasan Mentari Sehat Indonesia - SSR Pemalang</h2>
           <div class="Album">
@@ -146,19 +145,19 @@
             </div>
           </div>
         </article>
-
+        <!-- coming soon (Masih nyari Fotonya)
         <article>
           <h2>CV. Multikomunika (Authorized Dealer XL-Axiata) Semarang</h2>
           <div class="Album">
-            <div> <!-- Gambar 1 -->
+            <div> -- Gambar 1 --
               <img src="gambar.jpg" alt="gambar" />
               <p>Isi tulisan</p>
             </div>
-            <div> <!-- Gambar 2 -->
+            <div> -- Gambar 2 --
               <img src="gambar.jpg" alt="gambar" />
               <p>Isi tulisan</p>
             </div>
-            <div> <!-- Gambar 3 -->
+            <div> -- Gambar 3 --
               <img src="gambar.jpg" alt="gambar" />
               <p>Isi tulisan</p>
             </div>
@@ -168,15 +167,15 @@
         <article>
           <h2>PT. Indomarco Prismatama,Tbk. - Branch Cirebon</h2>
           <div class="Album">
-            <div> <!-- Gambar 1 -->
+            <div> -- Gambar 1 --
               <img src="gambar.jpg" alt="gambar" />
               <p>Isi tulisan</p>
             </div>
-            <div> <!-- Gambar 2 -->
+            <div> -- Gambar 2 --
               <img src="gambar.jpg" alt="gambar" />
               <p>Isi tulisan</p>
             </div>
-            <div> <!-- Gambar 3 -->
+            <div> -- Gambar 3 --
               <img src="gambar.jpg" alt="gambar" />
               <p>Isi tulisan</p>
             </div>
