Pembaruan untuk halaman about, galery, dan project, membuat draft Detail project, dan kelengkapan lainnya
Merubah style class=inpage dan penggunaannya di .html (sekarang memakai div);//; merubah style class=project;//; memberikan class=Button pada ''Aprofil a'' dan menggunakannya pada Detail project;//; memberikan glow effect pada navbar dan ''Project a'';//; melengkapi konten Detail-Project;//; menambah halaman Draft Project Detail untuk mempermudah pembuatan list project baru;//; update robots.txt

--- a/3gallery.html
+++ b/3gallery.html
@@ -50,9 +50,10 @@
 
       <!-- Content Start -->
       <section class="main">
-        <!-- <h1 Class="Alert">WORK IN PROGRES, PLEASE COME BACK LATER!</H1> -->
-        <h1 class="InPage">Momen Belajar & Berkarya</H1>
-        <p class="InPage">Sekilas perjalanan saya dalam dunia kerja, belajar, dan berbagi...</p>
+        <div class="InPage">
+          <h1>Momen Belajar & Berkarya</H1>
+          <p>Sekilas perjalanan saya dalam dunia kerja, belajar, dan berbagi...</p>
+        </div>
         <!-- coming soon masih nyari fotonya
         <article>
           <h2>Yayasan Haqqus Sunnah Pemalang</h2>
