--- a/4portfolio.html
+++ b/4portfolio.html
@@ -50,8 +50,10 @@
 
         <!-- Content Start -->
         <section class="main">
-            <H1 class="InPage" >Portofolio Proyek</H1>
-            <p class="InPage">Berikut beberapa proyek yang pernah saya kerjakan dalam bidang administrasi, keuangan, otomatisasi data, dan web development.</p>
+            <div class="InPage">
+              <h1>Portofolio Proyek</H1>
+              <p>Berikut beberapa proyek yang pernah saya kerjakan dalam bidang administrasi, keuangan, otomatisasi data, dan web development.</p>
+            </div>
 
             <div class="Project">
 
