--- a/2about.html
+++ b/2about.html
@@ -64,7 +64,7 @@
               dan pengelolaan data. Saya selalu berkomitmen untuk terus belajar 
               dan berkontribusi dalam bidang administrasi, keuangan, dan teknologi.
             </p>
-            <a href="4portfolio.html">Lihat Portofolio</a>
+            <a href="4portfolio.html" class="Button">Lihat Portofolio</a>
           </section>
         <!-- Simple Profil End -->
 
