Memperbaiki susunan class dan ID, menghide yang belum jadi, dan menyelesaikan project website
Memberikan min-height pada pada class main,//, menambahkan id=''coming-soon'' untuk konten yang masih dalam tahap development, untuk di hide.,//, menghapus Dampak/Value pada -Draft-Detail-Project.html,//, merubah margin Detail-Project
Menggabung Dua class (DP-Show ++ DP-Tools ++ DP-Hasil) menjadi DP-Content
mengurangi gap pada DP-Tittle,//, Memisahkan Deskripsi Proyek dari DP-Tittle dan memasukannya ke DP-Content tersendiri,//, menambah beberapa container DP-Content di -Draft-Detail-Project.html,//, menambal style DP-Content ul, yang mengatur list fitur,//, merubah logo-linkedin.webp supaya modelnya mirip dengan lainnya.,//, Menambah foto untuk Portofolio website sekolah dan mengatur stylenya - akan dipakai dilainnya juga,//, penambahan isi Website-Sekolah-DCD-Academy.html.

--- a/4portfolio.html
+++ b/4portfolio.html
@@ -58,20 +58,20 @@
             <div class="Project">
 
               <a href="portfolio/Website-Sekolah-DCD-Academy.html">
-                <img sr="Website-Sekolah-DCD-Academy.jpg" alt="Halaman Website Sekolah DCD Academy" />
+                <img src="/bahan/Priview-webiste-M.webp" alt="Halaman Website Sekolah DCD Academy" />
                 <h2>Website Sekolah DCD Academy</h2>
                 <p>Project Latihan membuat wesite sekolah DCD Academy</p>
                 <span>Tools: html, css, javascript</span>
               </a>
 
-              <a href="portfolio/Excel-Akuntansi-Otomatis.html">
+              <a href="portfolio/Excel-Akuntansi-Otomatis.html" id="coming-soon">
                 <img sr="Excel-Akuntansi-Otomatis.jpg" alt="Gambar Aplikasi Excel Akuntansi Otomatis" />
                 <h2>Aplikasi Excel Akuntansi Otomatis</h2>
                 <p>Project Pembuatan Aplikasi pencatatan Akuntansi Otomatis dan sederhana dengan Excel</p>
                 <span>Tools: Ms.Excel</span>
               </a>
 
-              <a href="portfolio/Excel-Buku-Kepegawaian.html">
+              <a href="portfolio/Excel-Buku-Kepegawaian.html" id="coming-soon">
                 <img sr="Excel-Buku-Kepegawaian.jpg" alt="gambar Project Automasi Buku Kepegawaian Excel" />
                 <h2>Automasi Buku Kepegawaian Excel</h2>
                 <p>Project membuat Buku Kepegawaian yang berisi Database Pegawai, Register SK,</p>
@@ -80,7 +80,7 @@
               
             </div>
 
-            <div class="Project">
+            <div id="coming-soon" class="Project">
 
               <a href="portfolio/Excel-Slip-Gaji-Sederhana.html">
                 <img sr="Excel-Slip-Gaji-Sederhana.jpg" alt="Gambar Slip Gaji Sederhana Excel" />
