menghide Portfolio pada 2about.html menggunakan id=''coming-soon''

--- a/2about.html
+++ b/2about.html
@@ -158,7 +158,7 @@
         <!-- Experience End -->
 
         <!-- Portofolio Start -->
-          <section class="Aportfolio">
+          <section id="coming-soon" class="Aportfolio">
             <h2>Portofolio</h2>
             <div class="Aport">
               <div>
